add: auth form, improved design for main page

--- a/index.html
+++ b/index.html
@@ -1,348 +1,16 @@
 <!DOCTYPE html>
-<html lang="ru">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Производственный план</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    margin: 0;
-    padding: 20px;
-  }
-
-  /* Заголовок */
-  h1 {
-    text-align: center;
-    margin-bottom: 20px;
-    font-size: 2em;
-  }
-
-  /* Обертка */
-  .wrapper {
-    background-color: #ffffff;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    padding: 20px;
-  }
-
-  /* Вкладки */
-  .tabs {
-    display: flex;
-    border-bottom: 1px solid #ccc;
-    border-radius:4px;
-    overflow:hidden;
-    margin-bottom:15px; /* Отступ между вкладками и контентом */
-  }
-
-  /* Отдельные вкладки */
-  .tab {
-    flex:1;
-    padding:10px 20px;
-    cursor:pointer;
-    background-color:#f0f0f0;
-    
-    /* Скругление по левому или правому краю для эффекта */
-    border-top-left-radius:4px;
-    border-top-right-radius:4px; 
-   
-    font-weight:bold;
-    text-align:center;
-
-    transition:.3s background-color, box-shadow, border-bottom;
-
-    margin-right:-1px; /* убрать зазор между вкладками */
-}
-
-/* Отступ между вкладками (чтобы не слипались) */
-.tabs > .tab + .tab {
-   margin-left:10px; /* добавляем отступ между вкладками */
-}
-
-.tab:hover {
-    background-color:#e0e0e0; 
-}
-
-.tab.active {
-    background-color:#007bff; /* насыщенный синий */
-    color:#fff; 
-    border-bottom:3px solid #0056b3; /* выделение снизу */
-}
-
-/* Контент вкладок */
-#tab-content > div {
-    display:none; /* по умолчанию скрыты */
-}
-
-/* Первая вкладка активна по умолчанию */
-#plan1 {
-   display:block;
-}
-
-/* Основной контейнер внутри вкладки - разделение на aside и main */
-.plan-container {
-   display:flex;
-   margin-top:20px;
-   font-size:1em; /* базовый размер шрифта для main (откат) */
-}
-
-/* aside - ширина около25% и увеличенный шрифт на +0.5em */
-aside {
-   flex-basis:25%;
-   max-width:25%;
-   padding:10px;
-
-   background:#fafafa;
-
-   border-radius:4px;
-
-   /* граница справа между aside и main */
-   border-right:1px solid #ccc;
-
-   display:flex;
-   flex-direction:column; /* кнопки сверху вниз */
-
-   font-size:1.5em; /* увеличение шрифта в aside на +0.5em (от базового) = изначально было, так что добавим сюда явно для ясности */
-
-}
-
-/* Шрифты для кнопок в aside (оставим как есть) */
-
-aside button {
-   padding:10px;
-   margin-bottom:10px;
-   cursor:pointer;
-
-   background-color:#f0f0f0;
-
-   border:none;
-   border-radius:4px;
-
-   transition:.3s background-color, box-shadow;
-
-}
-
-aside button:hover {
-   background-color:#e0e0e0; 
-}
-
-aside button.active {
-   background-color:#007bff; 
-   color:#fff; 
-}
-
-/* main - ширина около75% и базовый размер шрифта без увеличения */
-main {
-   flex-basis:75%;
-   max-width:75%;
-   padding-left:20px;
-
-}
-
-table {
-   width:auto; /* ширина по содержимому или можно задать фиксированную ширину */
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-  
-/* Границы таблицы и скругление углов для ячеек (по желанию)*/
-border-collapse: collapse;
-
-/* Центрирование колонок таблицы по горизонтали (по умолчанию)*/
-thead th,
-tbody td {
-   padding:8px;
-
-  
-text-align:center;
-
-/* Границы таблицы вокруг ячеек */
-border:1px solid #ccc;
-
-/* Скругление углов у таблицы (если нужно) — применим к таблице в целом или к заголовкам/ячейкам отдельно */
-
-}
-</style>
-</head>
-<body>
-
-<h1>Производственный план</h1>
-
-<div class="wrapper">
-<!-- Вкладки -->
-<div class="tabs">
- <button class="tab active" onclick="activateTab(event,'plan1')">Производственный План</button>
- <button class="tab" onclick="activateTab(event,'plan2')">Другой план</button>
-</div>
-
-<!-- Контент вкладок -->
-<div id="tab-content">
- <!-- Первая вкладка -->
- <div id="plan1">
- <div class="plan-container">
-   <!-- aside с кнопками годов -->
-   <aside>
-     <button class="year-btn active" data-year="2020" onclick="selectYear(this)">2020</button>
-     <button class="year-btn" data-year="2021" onclick="selectYear(this)">2021</button>
-     <button class="year-btn" data-year="2022" onclick="selectYear(this)">2022</button>
-     <button class="year-btn" data-year="2023" onclick="selectYear(this)">2023</button>
-     <button class="year-btn" data-year="2024" onclick="selectYear(this)">2024</button>
-     <button class="year-btn" data-year="2025" onclick="selectYear(this)">2025</button>
-   </aside>
-
-   <!-- main с таблицей -->
-   <main>
-     <table id="year-table">
-       <thead>
-         <tr>
-           <th>Колонка 1</th>
-           <th>Колонка 2</th>
-           <th>Колонка 3</th>
-         </tr>
-       </thead>
-       <tbody id="table-body">
-         <!-- Данные будут вставляться через JS -->
-       </tbody>
-     </table>
-   </main>
- </div>
- </div>
-
- <!-- Вторая вкладка "Другой план", аналогичная по структуре -->
-<div id="plan2" style="display:none;">
-<div class="plan-container">
- <!-- aside с кнопками годов -->
- <aside>
-     <button class="year-btn active" data-year="2019" onclick="selectYear(this,'plan2')">2019</button>
-     <button class="year-btn" data-year="2020" onclick="selectYear(this,'plan2')">2020</button>
-     <button class="year-btn" data-year="2021" onclick="selectYear(this,'plan2')">2021</button>
-     <button class="year-btn" data-year="2022" onclick="selectYear(this,'plan2')">2022</button>
- </aside>
-
- <!-- main с таблицей -->
-<main>
-<table id='other-table'>
-<thead>
-<tr><th>Параметр А</th><th>Параметр Б</th></tr></tr></thead><tbody></tbody></table></main></div></div>
-
-<script>
-// Переключение вкладок
-function activateTab(evt, tabId) {
- const tabs = document.querySelectorAll('.tab');
- const contents = document.querySelectorAll('#tab-content > div');
-
- tabs.forEach(t => t.classList.remove('active'));
- contents.forEach(c => c.style.display='none');
-
- evt.currentTarget.classList.add('active');
- document.getElementById(tabId).style.display='block';
-
- // Если переключились на план1 — сбросить выбор года и показать таблицу для текущего года
- if (tabId==='plan1') {
-   // активировать кнопку года по умолчанию (например, первый)
-   const buttons = document.querySelectorAll('.year-btn');
-   buttons.forEach(b => b.classList.remove('active'));
-   
-   // активировать кнопку для года по умолчанию (например, первый)
-   if (buttons.length >0) {
-     buttons[0].classList.add('active');
-     loadTable(buttons[0].dataset.year);
- }
- }
-}
-
-// Обработка выбора года
-function selectYear(btn, plan='plan1') {
- const selector = plan==='plan1' ? '.year-btn' : '#'+plan+' .year-btn';
- const buttons = document.querySelectorAll(selector);
- buttons.forEach(b => b.classList.remove('active'));
- btn.classList.add('active');
-
- const year = btn.dataset.year;
-
- if(plan==='plan1'){
-     loadTable(year);
- } else if(plan==='plan2'){
-     loadOtherTable(year);
- }
-}
-
-// Функция для загрузки данных первой таблицы
-function loadTable(year) {
- const tbody = document.getElementById('table-body');
- tbody.innerHTML=''; // очистить
-
- // Генерируем пример данных
- for(let i=1;i<=5;i++) { // например, пять строк
-   const row = document.createElement('tr');
-   
-   const cell1 = document.createElement('td');
-   cell1.textContent=`${year} - Значение ${i}A`;
-   
-   const cell2 = document.createElement('td');
-   cell2.textContent=`${year} - Значение ${i}B`;
-   
-   const cell3 = document.createElement('td');
-   cell3.textContent=`${year} - Значение ${i}C`;
-   
-   row.appendChild(cell1);
-   row.appendChild(cell2);
-   row.appendChild(cell3);
-   
-   tbody.appendChild(row);
- }
-}
-
-// Функция для загрузки данных второй таблицы
-function loadOtherTable(year) {
- const tbody=document.querySelector('#other-table tbody');
- tbody.innerHTML=''; // очистить
-
- // Генерируем пример данных
- for(let i=1;i<=4;i++){
-     const row=document.createElement('tr');
-
-     const paramA=document.createElement('td');
-     paramA.textContent=`Параметр А ${i} (${year})`;
-
-     const paramB=document.createElement('td');
-     paramB.textContent=`Параметр Б ${i} (${year})`;
-
-     row.appendChild(paramA);
-     row.appendChild(paramB);
-
-     tbody.appendChild(row);
- }
-}
-
-// Инициализация при загрузке страницы
-window.onload=function() {
- // активировать первый год по умолчанию в первой вкладке
- const firstBtn=document.querySelector('.tab.active').nextElementSibling?.querySelector('.year-btn') || document.querySelector('.tab.active').nextElementSibling?.querySelector('.year-btn');
-
- // Для первой вкладки
- if(firstBtn){
-     firstBtn.classList.add('active');
-     loadTable(firstBtn.dataset.year);
- }
-
- // Для второй вкладки — активировать первый год
-const secondTabButtons=document.querySelectorAll('#plan2 .year-btn');
-if(secondTabButtons.length>0){
- secondTabButtons[0].classList.add('active');
- loadOtherTable(secondTabButtons[0].dataset.year);
-}
-};
-</script>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Форма авторизации</title>
+        <link href='/style-index.css' rel="stylesheet"/>
+    </head>
+    <body>
+      <form class="login" action="http://127.0.0.1:5500/mainPage-improved.html">
+        <input type="email" placeholder="name@belstat.by">
+        <input type="password" placeholder="Пароль">
+        <button type="submit">Войти</button>
+      </form>
+    </body>
+</html>
