--- a/mainPage.html
+++ b/mainPage.html
@@ -13,8 +13,8 @@
 <div class="wrapper">
 <!-- Вкладки -->
 <div class="tabs">
-  <button class="tab active" onclick="activateTab(event,'plan1')">Производственный План</button>
-  <button class="tab" onclick="activateTab(event,'plan2')">Другой план</button>
+  <button class="tab active" onclick="activateTab(event,'plan1')">Демографическая статистика</button>
+  <button class="tab" onclick="activateTab(event,'plan2')">Экономическая статистика</button>
 </div>
 
 <!-- Контент вкладок -->
