fix: rename url

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Форма авторизации</title>
-        <link href='/style-index.css' rel="stylesheet"/>
+        <link href='./style-index.css' rel="stylesheet"/>
     </head>
     <body>
-      <form class="login" action="http://127.0.0.1:5500/mainPage-improved.html">
+      <form class="login" action="./mainPage-improved.html">
         <input type="email" placeholder="name@belstat.by">
         <input type="password" placeholder="Пароль">
         <button type="submit">Войти</button>
