fix: sticky header for table

--- a/mainPage-improved.html
+++ b/mainPage-improved.html
@@ -98,13 +98,13 @@
                                 </button>
                             </div>
                         </div>
-                        <div class="overflow-x-auto">
+                        <div>
                             <table class="min-w-full bg-white border border-gray-200 rounded-lg shadow-sm">
-                                <thead>
+                                <thead class="sticky-head">
                                     <tr class="bg-gray-100">
                                         <th class="py-3 px-6 text-left text-sm font-semibold text-gray-700 border-b" rowspan="3" colspan="1" scope="colgroup">
                                             № п/п</th>
-                                        <th class="py-3 px-6 text-left text-sm font-semibold text-gray-700 border-b" rowspan="3" colspan="1" scope="colgroup">
+                                        <th class="py-3 px-6 text-left text-sm font-semibold text-gray-700" rowspan="3" colspan="1" scope="colgroup">
                                             Основной источник формирования официальной статистической информации
                                             (индекс формы, иной источник)
                                         </th>
